# attestation-rs

./: .gitignore  Cargo.toml
attestation/: example.json  example.signed.json  example2.json  example_empty.json
src/: Schema.sol  abi.rs  main.rs  types.rs
test/: Schema.t.sol
