[package]
name = "attestation-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = {version = "0.7", features = ["serde"]}
alloy-sol-types = { version = "0.7", features = ["json"] }
alloy-signer = "0.2"
alloy-signer-local = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.3", features = ["derive"] }

